--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -1,9 +1,8 @@
-.button-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
 button{
     border: none;
     border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    gap: 10px;
 }
