--- a/src/Slideshow.css
+++ b/src/Slideshow.css
@@ -1,11 +1,15 @@
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.container {
+.container-img {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+img {
+  width: 100%;
+  height: auto;
 }
